# wc2026-quant-prediction-system

./: .gitignore  .pre-commit-config.yaml  MASTER_PLAN.md  Makefile  README.md  mkdocs.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
configs/: crosswalk_teams.yaml  default.yaml
docs/: api-surface.md  architecture.md  discrepancies.md  index.md  models.md  runbook.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-storage-stack-duckdb-parquet.md  0003-experiment-tracking-local-runs-ledger.md  0004-append-only-ledger-hash-chain.md  0005-point-in-time-gate.md  0006-edge-thesis-coherence-settlement-timing.md  0007-free-first-data-access.md  0008-scope-and-killswitch.md  0009-llm-news-router-not-signal.md  0010-fetch-parse-separation.md  0011-terminal-ui-stack.md  0012-api-provenance-envelope.md  0013-terminal-design-system.md  0014-multiplexed-websocket.md  0015-vite-spa-toolchain.md  0016-visualization-stack-split.md  README.md
docs/data_contracts/: README.md  _template.md  elo_ratings.md  kalshi.md  polymarket.md  results_international.md
docs/explanation/: compliance.md  (+5 more)
frontend/: .gitignore  AGENTS.md  README.md  eslint.config.mjs  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.mts  vitest.config.mts
notebooks/: README.md  epl_prediction.ipynb
scripts/: bootstrap_api_data.py  check_links.py  phase0_selfcheck.py  phase1_fetch_smoke.py  phase2_selfcheck.py  sprint1_smoke.py
tests/: test_config.py  test_hashing.py  test_ledger.py  test_pit.py  test_time_utils.py
(+183 files in other folders)
