[project]
name = "wc2026"
version = "0.0.1"
description = "FIFA World Cup 2026 prediction, fair-value pricing, and market-making system"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "duckdb>=1.1",
    "httpx>=0.27",
    "tenacity>=8.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=3.0.3",
    "numpyro>=0.21.0",
    "jax>=0.10.2",
    "jaxlib>=0.10.2",
    "lightgbm>=4.6.0",
    "cvxpy>=1.9.2",
    "scikit-learn>=1.9.0",
    "requests>=2.34.2",
    "click>=8.4.2",
    "lxml>=6.1.1",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=1.10.0",
    "linkchecker>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wc2026"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "requests-mock>=1.12.1",
]
